# text-analyser

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
config/: config.yml
exploration/: explore.ipynb
