[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false # do not version dev builds
tagged-metadata = true

[tool.poetry]
name = "text-analyser"
version = "0.1.0"
description = "A tool for sentiment analysis and topic categorization"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyspark = "^3.5.5"
# other dependencies
nltk = "^3.9.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
# dev dependencies

# Semantic release configuration
[tool.semantic_release]
version_source = "commit"
branch = "main"
tag_format = "v{version}"
major_on_zero = false
commit_parser = "angular"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.branches.alpha]
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.branches.beta]
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.branches.rc]
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = ["chore*"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[[tool.semantic_release.changelog.sections]]
type = "feat"
section = "Features"

[[tool.semantic_release.changelog.sections]]
type = "fix"
section = "Bug Fixes"

[[tool.semantic_release.changelog.sections]]
type = "perf"
section = "Performance"

# Git configuration for semantic-release
[tool.semantic_release.git]
commit_message = "chore(release): {version} [skip ci]"
tag_message = "Release {version}"

# GitHub configuration for semantic-release
[tool.semantic_release.github]
repository = "aaronginder/text-analyser"
token = true

[tool.semantic_release.publish]
upload_to_repository = true
build_command = ""